--- a/ReferentImplementation/states/templates/states/toolbar.html
+++ b/ReferentImplementation/states/templates/states/toolbar.html
@@ -8,9 +8,9 @@
 		<div>
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-			    <li><a href="#"><span class="glyphicon glyphicon-flag"></span> States</a></li>
-			    <li><a href="#"><span class="glyphicon glyphicon-list-alt"></span> Cities</a></li>
-			    <li><a href="#"><span class="glyphicon glyphicon-tasks"></span> Stores</a></li>
+			    <li><a href="{% url 'states' %}"><span class="glyphicon glyphicon-flag"></span> States</a></li>
+			    <li><a href="{% url 'cities' %}"><span class="glyphicon glyphicon-list-alt"></span> Cities</a></li>
+			    <li><a href="{% url 'stores' %}"><span class="glyphicon glyphicon-tasks"></span> Stores</a></li>
 			</ul>
 		</div>
 	  </div>
