--- a/ReferentImplementation/states/templates/states/udetail.html
+++ b/ReferentImplementation/states/templates/states/udetail.html
@@ -14,3 +14,13 @@
 		</div>
 	</div>
 {% endblock %}
+
+{% block sidebar_content %}
+	<li>
+		<b>
+			<a href="{% url 'uedit' object.pk %}">
+				<span class="glyphicon glyphicon-pencil"></span>
+				Update
+			</a>
+		</b>
+{% endblock %}
