--- a/ReferentImplementation/states/templates/states/toolbar.html
+++ b/ReferentImplementation/states/templates/states/toolbar.html
@@ -12,6 +12,20 @@
 			    <li><a href="{% url 'cities' %}"><span class="glyphicon glyphicon-list-alt"></span> Cities</a></li>
 			    <li><a href="{% url 'stores' %}"><span class="glyphicon glyphicon-tasks"></span> Stores</a></li>
 			</ul>
+			<ul class="nav navbar-nav navbar-right">
+		      	<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">
+		      	<span class="glyphicon glyphicon-user"></span>
+		        {{user}} 
+		        <span class="caret"></span></a>
+		          <ul class="dropdown-menu">
+		          	<li><a href="{% url 'udetail' user.pk %}"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+		            {% if isadmin %}
+		            	<li><a href="/admin"><span class="glyphicon glyphicon-tower"></span> Admin panel</a></li>
+		            {% endif %}
+		            <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+		          </ul>
+		        </li>
+	      </ul>
 		</div>
 	  </div>
 	</nav>
