- prepravljeni staticki django templejti

--- a/AppGenerator/generator/static/business_app/templates/business_app/add.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/add.html
@@ -1,9 +1,9 @@
-{% extends "states/menu.html" %}
-{% block title %}Add {{ data|title }} {% endblock %}
+{% extends "business_app/menu.html" %}
+{% block title %}Add {{ title|title }} {% endblock %}
 
 {% block content %}
 	<div class="jumbotron">
-    	<h2>Add new {{ data|title }}</h2>
+    	<h2>Add new {{ title|title }}</h2>
     </div>
     
     <div class="bs-callout bs-callout-success">
