--- a/AppGenerator/generator/static/business_app/templates/business_app/delete.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/delete.html
@@ -1,5 +1,5 @@
-{% extends "states/menu.html" %}
-{% block title %}{{data|title}} delete page{% endblock %}
+{% extends "business_app/menu.html" %}
+{% block title %}{{title|title}} delete page{% endblock %}
 
 {% block content %}
 	<div class="jumbotron">
