--- a/AppGenerator/generator/static/business_app/templates/business_app/base.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/base.html
@@ -8,13 +8,13 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 	
 	{% load staticfiles %}
-	<link rel="stylesheet" href="{% static 'states/theme.css' %}">
-	<link rel="stylesheet" href="{% static 'states/callout.css' %}">
+	<link rel="stylesheet" href="{% static 'business_app/theme.css' %}">
+	<link rel="stylesheet" href="{% static 'business_app/callout.css' %}">
 	
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	
-	<title>{% block title %}StarTrack{% endblock %}</title>
+	<title>{% block title %}{{title|title}}{% endblock %}</title>
 
 </head>
 
