--- a/AppGenerator/generator/static/business_app/templates/business_app/list.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/list.html
@@ -1,5 +1,5 @@
-{% extends "states/menu.html" %}
-{% block title %}{{ data|title }}{% endblock %}
+{% extends "business_app/menu.html" %}
+{% block title %}{{ title|title }}{% endblock %}
 
 {% block content %}
 	<div id="page-content-wrapper">
@@ -7,18 +7,12 @@
         	<div class="row">
             	<div class="col-lg-12">	
             		<div class="page-header">
-       					<h2><span class="glyphicon glyphicon-flag"></span> {{ data|title }}</h2>
+       					<h2><span class="glyphicon glyphicon-flag"></span> {{ title|title }}</h2>
     				</div>
 					<ul class="list-group">
-						{% for state in states %}
+						{% for obj in object_list %}
 							<div class="bs-callout bs-callout-primary">
-								{% if data|stringformat:"s" == 'state' %}
-									<a href="{% url 'detailstate' state.pk %}">{{state.name}}</a>
-								{% elif data|stringformat:"s" == 'city' %}
-									<a href="{% url 'detailcity' state.pk %}">{{state.name}}</a>
-								{% else%}
-									<a href="{% url 'detailstore' state.pk %}">{{state.name}}</a>
-								{% endif %}
+								<a href="{% url detail_url obj.pk %}">{{obj.__getattribute__(name_attribute)}}</a>
 							</div>
 						{% endfor %}
 					</ul>
@@ -32,38 +26,28 @@
 {% block sidebar_content %}
 	<li>
 		<b>
-			{% if data|stringformat:"s" == 'state' %}
-				<a href="{% url 'addstate' %}">
-			{% elif data|stringformat:"s" == 'city' %}
-				<a href="{% url 'addcity' %}">
-			{% else%}
-				<a href="{% url 'addstore' %}">
-			{% endif %}
-					<span class="glyphicon glyphicon-file"></span>
-					Add new {{ data|title }}
-				</a>
-		</b>
-	</li>
-	<li>
-		<b>
-			{% if data|stringformat:"s" == 'state' %}
-				<a href="{% url 'searchstate' %}">
-			{% elif data|stringformat:"s" == 'city' %}
-				<a href="{% url 'searchcity' %}">
-			{% else%}
-				<a href="{% url 'searchstore' %}">
-			{% endif %}
-					<span class="glyphicon glyphicon-search"></span>
-					Search {{ data|title }}
-				</a>
-		</b>
-	</li>
-	<li>
-		<b>
-			<a>
-				<span class="glyphicon glyphicon-list-alt"></span>
-					Custom {{ data|title }}
+			<a href="{% url add_url %}">
+				<span class="glyphicon glyphicon-file"></span>
+				Add new {{ title|title }}
 			</a>
 		</b>
 	</li>
+	<li>
+		<b>
+			<a href="{% url search_url %}">
+				<span class="glyphicon glyphicon-search"></span>
+				Search {{ title|title }}
+			</a>
+		</b>
+	</li>
+	{% for custom_method in custom_methods %}
+	<li>
+		<b>
+			<a href="{% url custom_method.url %}">
+				<span class="glyphicon glyphicon-list-alt"></span>
+					{{custom_method.name}}
+			</a>
+		</b>
+	</li>
+	{% endfor %}
 {% endblock %}
