--- a/AppGenerator/generator/static/business_app/templates/business_app/login.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/login.html
@@ -1,4 +1,4 @@
-{% extends "states/menu.html" %}
+{% extends "business_app/menu.html" %}
 {% block title %}Login Page{% endblock %}
 
 {% block content %}
