--- a/AppGenerator/generator/static/business_app/templates/business_app/search.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/search.html
@@ -1,9 +1,9 @@
-{% extends "states/menu.html" %}
-{% block title %}{{ data|title }}{% endblock %}
+{% extends "business_app/menu.html" %}
+{% block title %}{{ title|title }}{% endblock %}
 
 {% block content %}
 	<div class="jumbotron">
-    	<h2>Search {{ data|title }}</h2>
+    	<h2>Search {{ title|title }}</h2>
     </div>
     
     <div class="bs-callout bs-callout-info">
