--- a/AppGenerator/generator/static/business_app/templates/business_app/update.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/update.html
@@ -1,10 +1,10 @@
-{% extends "states/menu.html" %}
-{% block title %}Edit {{data|title}}{% endblock %}
+{% extends "business_app/menu.html" %}
+{% block title %}Edit {{title|title}}{% endblock %}
 
 {% block content %}
 
 	<div class="jumbotron">
-    	<h2>Update {{data|title}}</h2>
+    	<h2>Update {{title|title}}</h2>
     </div>
 	
 	<div class="bs-callout bs-callout-primary">
