--- a/AppGenerator/generator/static/business_app/templates/business_app/detail.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/detail.html
@@ -4,7 +4,7 @@
 {% load filterlists from business_app_extras %}
 {% load filternormal from business_app_extras %}
 {% load filterurl from business_app_extras %}
-{% load isstring from business_app_extras %}
+{% load is_entity from business_app_extras %}
 
 {% block content %}
 <div class="jumbotron">
@@ -13,10 +13,10 @@
 		<ul class="list-group">
 			{% for name, value in mapa|filternormal %}
 				<li class="list-group-item"> <b>{{name|title}}:</b>
-					{% if value|isstring %}
-						{{value}}
+					{% if value|is_entity %}
+						<a href="{{value|filterurl}}">{{value}}</a>
 					{% else %}
-						 <a href="{{value|filterurl}}">{{value}}</a>
+						{{value}}
 					{% endif%}
 				</li>
 			{% endfor %}
