- fix ucitavanje svih dugmadi nakon logovanja - obrisana duplikat index metoda u business_app/views.py, umesto nje postoji __app_name__/views.py home view metoda na koju se redirektuje nakon logina

--- a/AppGenerator/generator/static/business_app/templates/business_app/login.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/login.html
@@ -6,7 +6,7 @@
 		{{message}}
 {% endif %}
 		<div class="jumbotron">
-			<form action="{% url 'index' %}" method="post" role="form">{% csrf_token %}
+			<form action="{% url 'home' %}" method="post" role="form">{% csrf_token %}
 				<h1>StarTrac</h1> 
 				<p>Referent implementation of MBRS project</p>
 				
