--- a/AppGenerator/generator/static/business_app/templates/business_app/base.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/base.html
@@ -1,15 +1,14 @@
 <html>
 
 <head>
-
-	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
-	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+	<link href="http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
 	
 	{% load staticfiles %}
 	<link rel="stylesheet" href="{% static 'business_app/theme.css' %}">
 	<link rel="stylesheet" href="{% static 'business_app/callout.css' %}">
+	<script type="text/javascript" src="{% static 'business_app/actions.js' %}" ></script>
 	
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
