--- a/AppGenerator/generator/static/business_app/templates/business_app/toolbar.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/toolbar.html
@@ -3,7 +3,7 @@
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 	  <div class="container-fluid">
 	    <div class="navbar-header">
-	 		<a class="navbar-brand" href="#"><span class="glyphicon glyphicon-road"></span> StarTrac</a>
+	 		<a class="navbar-brand" href="#"><span class="glyphicon glyphicon-road"></span> {{title}}</a>
 		</div>
 		<div>
 			<ul class="nav navbar-nav">
