--- a/AppGenerator/generator/static/business_app/templates/business_app/detail.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/detail.html
@@ -24,21 +24,41 @@
 	</div>
 </div>
 	
-	{% if mapa|filterlists|length > 0%}
-		<div class="bs-callout bs-callout-default">
-			<ul class="list-group">
-				{% for name, value in mapa|filterlists %}
-					<li class="list-group-item"> <b>{{name|title}}:</b>
-						<ul>
-							{% for val in value %}
-								<li><a href="{{val|filterurl}}">{{val}}</a></li>
-							{% endfor %}
-						</ul>
-					</li>
-				{% endfor %}
-			</ul>
-		</div>
-	{% endif %}
+<ul class="nav nav-tabs" role="tablist">
+	{% for name, value in mapa|filterlists %}
+		{% if forloop.first %}
+			<li class="active"><a href="#pane{{forloop.counter}}" data-toggle="tab"><span class="glyphicon glyphicon-tasks"></span> {{name|title}}</a></li>
+		{% else %}
+			<li><a href="#pane{{forloop.counter}}" data-toggle="tab"><span class="glyphicon glyphicon-tasks"></span> {{name|title}}</a></li>
+		{% endif %}
+	{% endfor %}   
+</ul>
+	
+<div class="tab-content">
+	{% for name, value in mapa|filterlists %}
+		{% if forloop.first %}
+			<div id="pane{{forloop.counter}}" class="tab-pane active">
+				<div class="bs-callout bs-callout-default">
+					<ul class="list-group">
+						{% for val in value %}
+							<li class="list-group-item"><a href="{{val|filterurl}}">{{val}}</a></li>
+						{% endfor %}
+					</ul>
+				</div>
+			</div>
+		{% else %}
+			<div id="pane{{forloop.counter}}" class="tab-pane">
+				<div class="bs-callout bs-callout-default">
+					<ul class="list-group">
+						{% for val in value %}
+							<li class="list-group-item"><a href="{{val|filterurl}}">{{val}}</a></li>
+						{% endfor %}
+					</ul>
+				</div>
+			</div>
+		{% endif %}
+	{% endfor %}
+</div>
 {% endblock %}
 
 {% block sidebar_content %}
