--- a/AppGenerator/generator/static/business_app/templates/business_app/detail.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/detail.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <div class="jumbotron">
-	<h2>{{title|title}} detail</h2>
+	<h2>{{display_name|title}} detail</h2>
 	<div class="bs-callout bs-callout-default">
 		<ul class="list-group">
 			{% for name, value in mapa|filternormal %}
@@ -46,7 +46,7 @@
 		<b>
 			<a href="{% url update_url object.pk %}">
 				<span class="glyphicon glyphicon-pencil"></span>
-				Update {{ title|title }}
+				Update {{ display_name|title }}
 			</a>
 		</b>
 	</li>
@@ -54,7 +54,7 @@
 		<b>
 			<a href="{% url delete_url object.id %}" >
 				<span class="glyphicon glyphicon-remove"></span>
-				Delete {{ title|title }}
+				Delete {{ display_name|title }}
 			</a>
 		</b>
 	</li>
