- ispravljen display name na side baru i sredjene ostale labele

--- a/AppGenerator/generator/static/business_app/templates/business_app/detail.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/detail.html
@@ -1,5 +1,5 @@
 {% extends "business_app/menu.html" %}
-{% block title %}{{title|title}} detail page{% endblock %}
+{% block title %}{{display_name|title}} detail page{% endblock %}
 {% load classname from business_app_extras %}
 {% load filterlists from business_app_extras %}
 {% load filternormal from business_app_extras %}
