--- a/AppGenerator/generator/static/business_app/templates/business_app/menu.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/menu.html
@@ -6,7 +6,7 @@
         	<li class="sidebar-brand">
             	<p>
             		<span class="glyphicon glyphicon-road"></span>
-            		{{title}}
+            		{{display_name|title}}
             	</p>
             </li>
      		{% block sidebar_content %}{% endblock %}
