--- a/AppGenerator/generator/static/business_app/templates/business_app/result.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/result.html
@@ -1,4 +1,5 @@
 {% extends "business_app/menu.html" %}
+{% block title %}{{display_name|title}} result page{% endblock %}
 
 {% block content %}
 	<div id="page-content-wrapper">
