--- a/AppGenerator/generator/static/business_app/templates/business_app/search.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/search.html
@@ -1,5 +1,5 @@
 {% extends "business_app/menu.html" %}
-{% block title %}{{ display_name|title }}{% endblock %}
+{% block title %}Search {{ display_name|title }}{% endblock %}
 
 {% block content %}
 	<div class="jumbotron">
