--- a/AppGenerator/generator/static/business_app/templates/business_app/toolbar.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/toolbar.html
@@ -3,7 +3,7 @@
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 	  <div class="container-fluid">
 	    <div class="navbar-header">
-	 		<a class="navbar-brand" href="#"><span class="glyphicon glyphicon-road"></span> {{title}}</a>
+	 		<a class="navbar-brand" href="#"><span class="glyphicon glyphicon-road"></span> {{display_name}}</a>
 		</div>
 		<div>
 			<ul class="nav navbar-nav">
@@ -20,7 +20,7 @@
 		          <ul class="dropdown-menu">
 		          	<li><a href="{% url 'udetail' user.pk %}"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
 		            {% if isadmin %}
-		            	<li><a href="/admin"><span class="glyphicon glyphicon-tower"></span> Admin panel</a></li>
+		            	<li><a href="/admin"><span class="glyphicon glyphicon-tower"></span> Admin Panel</a></li>
 		            {% endif %}
 		            <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 		          </ul>
