--- a/AppGenerator/generator/static/business_app/templates/business_app/delete.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/delete.html
@@ -1,5 +1,5 @@
 {% extends "business_app/menu.html" %}
-{% block title %}{{title|title}} delete page{% endblock %}
+{% block title %}{{display_name|title}} delete page{% endblock %}
 
 {% block content %}
 	<div class="jumbotron">
