--- a/AppGenerator/generator/static/business_app/templates/business_app/toolbar.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/toolbar.html
@@ -9,7 +9,11 @@
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Home</a></li>
 				{% for toolbar_item in toolbar_items %}
-			    	<li><a href="{% url toolbar_item.url %}"><span class="glyphicon glyphicon-tasks"></span> {{toolbar_item.name}}</a></li>
+			    	<li>
+			    		<a href="{% url toolbar_item.url %}" data-toggle="tooltip" data-placement="bottom" title="{{toolbar_item.tooltip}}">
+			    			<span class="glyphicon glyphicon-tasks"></span> {{toolbar_item.name}}
+			    		</a>
+			    	</li>
 			    {% endfor %}
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
