--- a/AppGenerator/generator/static/business_app/templates/business_app/list.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/list.html
@@ -14,7 +14,12 @@
 					<ul class="list-group">
 						{% for obj in object_list %}
 							<div class="bs-callout bs-callout-primary">
-								<a href="{% url detail_url obj.pk %}">{{obj|get_attribute:main_attribute}}</a>
+								<span class="glyphicon glyphicon-chevron-right"></span>
+								<a href="{% url detail_url obj.pk %}" data-toggle="tooltip" 
+																	  data-placement="right" 
+																	  title="Click to see details about {{obj}} ">
+									{{obj|get_attribute:main_attribute}}
+								</a>
 							</div>
 						{% endfor %}
 					</ul>
