[UPDATE] base dodat deo koji ce se baviti detaljima [UPDATE] main koji ce crtati detalje [UPDATE]visuals koji ima css informacije

--- a/AppGenerator/generator/static/business_app/templates/business_app/main.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/main.html
@@ -1,3 +1,14 @@
 {% extends "business_app/toolbar.html" %}
 
 {% block title %}Main Page{% endblock %}
+
+{% block content %}
+	{{block.super}}
+	<div class="page-header">
+	</div>
+{% endblock%}
+
+{% block visuals %}
+	<div class="placeholder">
+	</div>
+{% endblock %}
