--- a/AppGenerator/generator/static/business_app/static/business_app/visual.css
+++ b/AppGenerator/generator/static/business_app/static/business_app/visual.css
@@ -18,6 +18,7 @@
 	border-bottom: 1px solid #a1a1a1;
 	border-radius: 3px;
 	box-shadow: 1px 1px 1px #888888;
+	height: 100%;
 }
 
 .graph{
@@ -32,6 +33,7 @@
 	border-bottom: 1px solid #a1a1a1;
 	border-radius: 3px;
 	box-shadow: 1px 1px 1px #888888;
+	height: 100%;
 }
 
 
