--- a/AppGenerator/generator/static/business_app/templates/business_app/main.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/main.html
@@ -10,5 +10,15 @@
 
 {% block visuals %}
 	<div class="placeholder">
+	{% for position, val in visuals.items %}
+		{% if position != "graph" %}
+			<div class="cellContainer">
+			</div>
+		{% else %}
+			<div class="graph">
+				<canvas id="canvas{{forloop.counter}}" height="100"></canvas>
+			</div>
+		{% endif %}
+	{% endfor %}
 	</div>
 {% endblock %}
