[UPDATE]Action dodat ajax poziv za visuals [DELETE]custom templejt metoda visuals posto se sada radi preko ajax-a [UPDATE] project_view templejt posto vise ne koristmo stari nacin [NEW]custom templejt dodat poziv ajx-a [NEW]urls templejt dodat hendler za ajax

--- a/AppGenerator/generator/static/business_app/templates/business_app/main.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/main.html
@@ -9,16 +9,6 @@
 {% endblock%}
 
 {% block visuals %}
-	<div class="placeholder">
-	{% for position, val in visuals.items %}
-		{% if position != "graph" %}
-			<div class="cellContainer">
-			</div>
-		{% else %}
-			<div class="graph">
-				<canvas id="canvas{{forloop.counter}}" height="100"></canvas>
-			</div>
-		{% endif %}
-	{% endfor %}
+	<div class="placeholder" id="placeHolder">
 	</div>
 {% endblock %}
