[NEW]Genericko citanje podataka za grafiuk i ddoavanje na main stranicu [UPDATE]main template da moze da primi grafike [UPDATE] custim template sa nekim dummy vrednostima za sada

--- a/AppGenerator/generator/static/business_app/templates/business_app/main.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/main.html
@@ -10,5 +10,12 @@
 
 {% block visuals %}
 	<div class="placeholder" id="placeHolder">
+	<div class="cellContainer">
+	</div>
+	<div class="cellContainer">
+	</div>
+	<div class="cellContainer">
+	</div>
+	<div class="graph" id="graph">
 	</div>
 {% endblock %}
