[UPDATE]Dodavanje detalja za left panel

--- a/AppGenerator/generator/static/business_app/templates/business_app/main.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/main.html
@@ -10,12 +10,13 @@
 
 {% block visuals %}
 	<div class="placeholder" id="placeHolder">
-	<div class="cellContainer">
-	</div>
-	<div class="cellContainer">
-	</div>
-	<div class="cellContainer">
-	</div>
-	<div class="graph" id="graph">
+		<div class="cellContainer" id="leftPanel">
+		</div>
+		<div class="cellContainer" id="centar">
+		</div>
+		<div class="cellContainer" id="right">
+		</div>
+		<div class="graph" id="graph">
+		</div>
 	</div>
 {% endblock %}
