[NEW]Dodato popunjavanje centralnog panela dummy podacima

--- a/AppGenerator/generator/static/business_app/templates/business_app/main.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/main.html
@@ -12,7 +12,7 @@
 	<div class="placeholder" id="placeHolder">
 		<div class="cellContainer" id="leftPanel">
 		</div>
-		<div class="cellContainer" id="centar">
+		<div class="cellContainer" id="centarPanel">
 		</div>
 		<div class="cellContainer" id="right">
 		</div>
