[NEW]Dodati detalji citanja u desni panel

--- a/AppGenerator/generator/static/business_app/templates/business_app/main.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/main.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class="cellContainer" id="centarPanel">
 		</div>
-		<div class="cellContainer" id="right">
+		<div class="cellContainer" id="rightPanel">
 		</div>
 		<div class="graph" id="graph">
 		</div>
