--- a/AppGenerator/generator/static/business_app/templates/business_app/login.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/login.html
@@ -7,8 +7,8 @@
 {% endif %}
 		<div class="jumbotron">
 			<form action="{% url 'home' %}" method="post" role="form">{% csrf_token %}
-				<h1>{{title}}</h1> 
-				<p>Referent implementation of MBRS project</p>
+				<h1>{{display_name}}</h1> 
+				<p>{{descr}}</p>
 				
 				<div class="form-group">
 			      <label for="username">Username:</label>
