--- a/AppGenerator/generator/static/business_app/templates/business_app/base.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/base.html
@@ -1,19 +1,20 @@
+{% load staticfiles %}
+
 <html>
 
 <head>
-	<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-	<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-	<link href="http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
+	<script type="text/javascript" src="{% static 'business_app/jquery1.10.4/jquery-1.10.2.js' %}"></script>
+	<script type="text/javascript" src="{% static 'business_app/jquery1.10.4/jquery-ui.js' %}"></script>
+	<link href="{% static 'business_app/jquery1.10.4/jquery-ui.css' %}" rel="stylesheet">
 	
-	{% load staticfiles %}
 	<link rel="stylesheet" href="{% static 'business_app/theme.css' %}">
 	<link rel="stylesheet" href="{% static 'business_app/callout.css' %}">
 	<link rel="stylesheet" href="{% static 'business_app/visual.css' %}">
 	<script type="text/javascript" src="{% static 'business_app/Chart.js' %}" ></script>
 	<script type="text/javascript" src="{% static 'business_app/actions.js' %}" ></script>
 	
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="{% static 'business_app/bootstrap3.3.4/css/bootstrap.min.css' %}">
+	<script type="text/javascript" src="{% static 'business_app/bootstrap3.3.4/js/bootstrap.min.js' %}"></script>
 	
 	<title>{% block title %}{{title|title}}{% endblock %}</title>
 
