[NEW] model dodat paket [UPDATE] toolbar templejt da renderuje za sada prvi novo paketa sa formama [UPDATE] view da podrzi toolar sa menijima

--- a/AppGenerator/generator/static/business_app/templates/business_app/toolbar.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/toolbar.html
@@ -9,13 +9,22 @@
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Home</a></li>
 				{% for toolbar_item in toolbar_items %}
-			    	<li>
-			    		<a href="{% url toolbar_item.url %}" data-toggle="tooltip" 
-			    											 data-placement="bottom" 
-			    											 title="{{toolbar_item.tooltip}}">
-			    			<span class="glyphicon glyphicon-tasks"></span> {{toolbar_item.name}}
-			    		</a>
-			    	</li>
+				<li class="dropdown">
+					<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+					<span class="glyphicon glyphicon-tasks"></span> {{toolbar_item.label}}
+					<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						{% for menu_item in toolbar_item.items %}
+					    	<li>
+					    		<a href="{% url menu_item.url %}" data-toggle="tooltip" 
+					    											 data-placement="bottom" 
+					    											 title="{{menu_item.tooltip}}">
+					    			<span class="glyphicon glyphicon-tasks"></span> {{menu_item.name}}
+					    		</a>
+					    	</li>
+				    	{% endfor %}
+			    	</ul>
+			    </li>
 			    {% endfor %}
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
