--- a/AppGenerator/generator/static/business_app/templates/business_app/base.html
+++ b/AppGenerator/generator/static/business_app/templates/business_app/base.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="{% static 'business_app/theme.css' %}">
 	<link rel="stylesheet" href="{% static 'business_app/callout.css' %}">
 	<link rel="stylesheet" href="{% static 'business_app/visual.css' %}">
+	<link rel="stylesheet" href="{% static 'business_app/submenu.css' %}">
 	<script type="text/javascript" src="{% static 'business_app/Chart.js' %}" ></script>
 	<script type="text/javascript" src="{% static 'business_app/actions.js' %}" ></script>
 	
